<resources>
    <string name="app_name">BinApp</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="no_digit_star">*</string>
    <string name="title_find_bin">Введите первые 6-8 цифр номера банковской карты (BIN/IIN), чтобы узнать информацию о банке</string>
    <string name="tv_find_bin">Введите первые 6-8 цифр</string>
    <string name="submit">Отправить</string>
    <string name="error_toast_find_bind">Введено число вне диапазона 6-8 чисел</string>
    <string name="bin">BIN:</string>
    <string name="bank">Банк:</string>
    <string name="currency">Основная валюта:</string>
    <string name="coordinate">Координаты:</string>
    <string name="map"><![CDATA[Перейти на карту >>]]></string>
    <string name="loading">Данные загружаются</string>
    <string name="country">Страна:</string>
    <string name="history_empty">Еще ничего нет</string>
</resources>
