<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadows"
    android:orientation="vertical"
    tools:context=".ui.binFinder.BinFinderFragment">

    <TextView
        android:id="@+id/tvPasswordTitle"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginHorizontal="@dimen/margin_main"
        android:layout_marginTop="@dimen/length_152dp"
        android:layout_marginBottom="@dimen/margin_main"
        android:text="@string/title_find_bin"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etDigit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_48dp"
        android:layout_margin="@dimen/margin_main"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:hint="@string/tv_find_bin"
        android:inputType="number"
        android:maxLength="8"
        android:textColor="@color/grey_2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSendBin"
        style="@style/StyleButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_48dp"
        android:layout_marginHorizontal="@dimen/margin_main"
        android:layout_marginTop="@dimen/margin_main"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>